bug-fix: header menu being covered by img hover column divider

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ a{
     flex-wrap: wrap;
     height: 7.8rem;
     transition: transform 1s;
+    z-index: 1;
 }
 
 .menu--hidden {
